--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="estilo.css" />
+    <script defer src="./script.js"></script>
     <title>Lojinha da Ba - Artesanais e Bijus</title>
   </head>
   <body>
     <section class="header">
       <h1>Bemvindo à Lojinha da Ba</h1>
+
+      <banner class="banner">
+        <img src='./img/20230808_203107.jpg' alt="">
+      </banner>
 
       <img src="./img/anterior.png" alt="botão anterior" class="anterior">
       
