--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <body>
     <!----------------------------------------------- header  -->
     <section id="header" class="header">
-      <h1 id="bemvindo">Bemvindo à Lojinha da Ba</h1>
+      <div class="title">
+        <h1 id="bemvindo">Bemvindo à Lojinha da Ba</h1>
+        <h3>Produtos feitos a mão</h3>
+      </div>
       
       <!----------------------------------------------- banner  -->
       <banner class="banner">
