--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!----------------------------------------------- header  -->
     <section id="header" class="header">
       <div class="title">
-        <h1 id="bemvindo">Bemvindo à Lojinha da Ba</h1>
+        <h1 id="bemvindo">Bem-vindo à Lojinha da Ba</h1>
         <h3>Produtos feitos a mão</h3>
       </div>
       
@@ -113,7 +113,14 @@
     </section>
     <!-- master-container -->
     
-    <section class="rodape">rodape</section>
+    <section class="rodape">
+      <h2>Todos os produtos neste site são feitos a mão.</h2>
+      <h2>Encomendas e compras podem ser feitas no número:</h2>
+      <div class="whats-div">
+        <img id='whats-icon' src="./img/logo-whatsapp.png" alt="">
+        <h2 id="whats-number">(51) 9-9656-6771</h2>
+    </div>
+    </section>
   </body>
   </html>
   
