--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     />
     <script defer src="./script.js"></script>
     <link rel="stylesheet" href="estilo.css" />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="banner.css" />
+    <link rel="stylesheet" href="menu.css" />
     <title>Lojinha da Ba - Artesanais e Bijus</title>
   </head>
   <body>
