--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-------------------------------- fontes utilizadas -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,11 +16,16 @@
       href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
       rel="stylesheet"
     />
-    <script defer src="./script.js"></script>
+    <!--------------------------------- arquivos de estilo -->
     <link rel="stylesheet" href="estilo.css" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="banner.css" />
     <link rel="stylesheet" href="menu.css" />
+    <link rel="stylesheet" href="rodape.css" />
+    <link rel="stylesheet" href="modal.css" />
+    <link rel="stylesheet" href="container.css" />
+    <!--------------------------------- script  -->
+    <script defer src="./script.js"></script>
     <title>Lojinha da Ba - Artesanais e Bijus</title>
   </head>
   <body>
@@ -122,7 +128,8 @@
       <div class="whats-div">
         <img id='whats-icon' src="./img/logo-whatsapp.png" alt="">
         <h2 id="whats-number">(51) 9-9656-6771</h2>
-    </div>
+      </div>
+      <h3 id="urzzomidia-h3">@urzzomidia&copy; - Desenvolvimento de Sites e Social Midia</h3>
     </section>
   </body>
   </html>
